# durendal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  LCsandbox.py  LICENSE.txt  NOTES.md  README.md  SECURITY.md  TODO.txt  amundworks.gitignore  mandelbrotproject.py  mandelbrotproject3.py  opgv.py  oppgave.py  pyproject.toml  test.py  Øving med potenser.py
AWPC/: pyproject.toml
AWPC/UniCrypt/: unicrypt.py
AWPC/UniMath/: unimath.py
AWPC/Utils/: utils.py
AWPC/awpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
CXX/: PrimeChecker.c  PrimeChecker.cpp  PrimeSieve.cpp
Docs/: docs.md
DuraPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Icarus/: entrypoint.py  pyproject.toml  skill_template.md  test.py
Icarus/core/: __init__.py
Icarus/core/engines/: communicative_engine.py  execution_engine.py  intent_engine.py
Icarus/core/mcp/: mcp_server_kernel.py  mcpexample.py  skill_loaders.py
Icarus/core/mcp/types/: input_schema.py  mcp_property.py  mcptool.py
Icarus/core/utilities/: decorators.py  txtfiletools.py
Icarus/logs/: runtime_log.txt
Icarus/skills/: skill_template.md  timeskill.py
Icarus/skills/calendar_lookup/: config.json  execute.py
Icarus/skills/get_time/: config.json  execute.py
Icarus/skills/greet/: config.json  execute.py
Icarus/skills/web_search/: config.json  execute.py
Scripts/: BuildAWPC.ps1  CleanAWPC.ps1  CleanupAWPC.ps1
UniForge/: README.md  UniForgeCLI.py
Vanguard/: README.md  SD Rules.txt  pyproject.toml
Vanguard/data/articles/: c_(programming_language).json  norway.json  python_(programming_language).json  water.json
Vanguard/data/markdown/: C (programming language).md  Norway.md  Python (programming language).md  Water.md
Vanguard/src/: main.py
Vanguard/src/markdown_compiler/: main.py
Vanguard/src/md_compiler/: __init__.py
Vanguard/src/md_compiler/compiler/: main.py
Vanguard/src/modules/: article.py  link.py  metadata.py  page_ir.py
Vanguard/src/search/: pagefinder.py  search_engine.py
Vanguard/src/types/: article.py  builders.py  link.py
Vulcan/: README.md  main.py
XO Series/: README.md  ROADMAP.md  XO_I.py  XO_II.py  XO_III.py  XO_IV.py  XO_V.py
amundworks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  (+1 more)
awpc/: README.md  __init__.py  moduleTools.py  pyproject.toml
awpc/commons/: constants.py  exceptions.py  types.py  utils.py
awpc/docs/: awpc.md
awpc/lowlevel/lexer/: lexer.py
awpc/src/: __init__.py
awpc/src/commons/: constants.py  exceptions.py
awpc/src/json_toolchain/: __init__.py  main.py
awpc/src/package/: __init__.py
awpc/src/package/commons/: __init__.py  color.py  color_dtypes.py  constants.py  exceptions.py  math_dtypes.py  numval_dtypes.py  old.py  phys_dtypes.py  types.py  utils.py
awpc/src/package/json_toolchain/: __init__.py  main.py
awpc/src/package/types/: color_dtypes.py  linalg_dtypes.py
awpc/src/package/unipy/: __init__.py  moduleTools.py
awpc/src/package/unipy/uniCLI/: __init__.py  uniCLI.py
awpc/src/package/unipy/unialgo/: __init__.py
awpc/src/package/unipy/unicrypt/: __init__.py
awpc/src/package/unipy/uniflight/: __init__.py  uniflight.py
awpc/src/package/unipy/unimath/: __init__.py  math_utils.py  unimath.py
awpc/src/package/unipy/uniops/: __init__.py  uniops.py
awpc/src/package/unipy/uniphys/: __init__.py  acoustics.py  astro.py  astrophys.py  mechanics.py  optics.py  uniphys.py
awpc/src/package/unipy/unipower/: __init__.py  unipower.py
awpc/src/package/unipy/unispace/: __init__.py  unispace.py
awpc/src/package/unipy/univiz/: __init__.py
awpc/src/types/: __init__.py  color_dtypes.py  linalg_dtypes.py  phys_dtypes.py
awpc/src/unipy/: moduletools.py
awpc/src/unipy/uniCLI/: uniCLI.py
awpc/src/unipy/unicrypt/: __init__.py
awpc/src/unipy/uniflight/: __init__.py  uniflight.py
awpc/src/unipy/unimath/: __init__.py  unimath.py
awpc/src/unipy/uniops/: __init__.py  uniops.py
awpc/src/unipy/uniphys/: __init__.py  acoustics.py  astrophys.py  electromags.py  fluidyn.py  mechanics.py  nuclear.py  quantum.py  thermodyn.py
awpc/src/unipy/unipower/: unipower.py
awpc/src/unipy/unispace/: __init__.py  unispace.py
awpc/uniCLI/: uniCLI.py
awpc/unicrypt/: __init__.py  unicrypt.py
awpc/uniexception/: uniexception.py
awpc/unimath/: unimath.py
awpc/uniphys/: uniphys.py
awpc/unipower/: unipower.py
awpc/unipy/uniCLI/: uniCLI.py
awpc/unipy/unialgo/: unialgo.py
awpc/unipy/uniflight/: uniflight.py
awpc/unipy/unimath/: unimath.py
awpc/unipy/uniphys/: uniphys.py
awpc/unipy/unipower/: unipower.py
awpc/unipy/unispace/: unispace.py
awpc/univiz/: univiz.py
awpc/utilities/: utils.py
awpc/utils/: utils.py
awpc_package/: .gitignore  README.md  pyproject.toml
awpc_package/src/awpc/: __init__.py
awpc_package/src/awpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
awpc_package/src/awpc/unicrypt/: unicrypt.py
awpc_package/src/awpc/unimath/: __init__.py  unimath.py
awpc_package/src/awpc/utils/: utils.py
durapy/: README.md  __init__.py  pyproject.toml
durapy/docs/: durapy.md
durapy/src/: __init__.py
durapy/src/commons/: __init__.py  constants.py  exceptions.py
durapy/src/types/: __init__.py  color_dtypes.py  linalg_dtypes.py  phys_dtypes.py
durapy/src/unipy/: __init__.py  moduletools.py
durapy/src/unipy/uniCLI/: __init__.py  uniCLI.py
durapy/src/unipy/unialgo/: __init__.py  unialgo.py
durapy/src/unipy/unicogni/: __init__.py  unicogni.py
durapy/src/unipy/unicrypt/: __init__.py  unicrypt.py
durapy/src/unipy/uniflight/: __init__.py  uniflight.py
durapy/src/unipy/unimath/: __init__.py  linalg_dtypes.py  unimath.py
durapy/src/unipy/uniops/: __init__.py  conpidcon.py  forward_kinematics.py  inverse_kinematics.py  uniops.py
durapy/src/unipy/uniphys/: __init__.py  acoustics.py  astrophys.py  electromags.py  fluidyn.py  mechanics.py  nuclear.py  phys_dtypes.py  thermodyn.py
durapy/src/unipy/unipower/: __init__.py  unipower.py
durapy/src/unipy/unispace/: __init__.py  unispace.py
durapy/src/unipy/univiz/: __init__.py  univiz.py
(+128 files in other folders)
