[project]
name = "AWPC" # AWPC for now. Will fix with polyrepo architechture
version = "0.0.1.3"
description = "AmundWorks Python Collective - Multi-dicipline Engineering Python Software"
authors = [{name = "Simon Stordal Amundgård"}]
dependencies = [
    "prompt_toolkit",
    "numpy"
]

[tool.setuptools]
packages = [
    "awpc",
    #"uniforge",
    #"vulcan",
]