[project]
name = "AWPC" # AWPC for now. Will fix with polyrepo architechture
version = "0.0.1.4"
description = "AmundWorks Python Collective - Multi-dicipline Engineering Software"
authors = [{name = "Simon Stordal Amundgård"}]
dependencies = [
    "questionary",
    "prompt_toolkit",
    "numpy"
]

[tool.setuptools]
packages = [
    "awpc",
    #"uniforge",
    #"vulcan",
]