[project]
name = "DuraPy" # DuraPy for now. Will fix with polyrepo architechture
version = "0.0.1.6"
description = "Durendal Python Collection - Multi-dicipline Engineering Software"
authors = [{name = "Simon Stordal Amundgård"}]
dependencies = [
    "questionary",
    "prompt_toolkit",
    "numpy"
]

[tool.setuptools]
packages = [
    "durapy",
    #"uniforge",
    #"vulcan",
    #"vanguard",
]