
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awpc"
version = "0.1.0"
description = "AmundWorks Python Collective - Engineering utilities"
authors = [
    { name="Simon Amundgård" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "prompt_toolkit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["AWPC*"]

