
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icarus"
version = "0.0.3-alpha"
description = "ICARUS - Multipotent Agentic AI platform"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["engineering", "math", "physics", "science", "python", "cli", "agent", "ai"]
authors = [{name = "Simon Stordal Amundgård"}]

dependencies = [
    "sounddevice",
    "elevenlabs",
    "dotenv",
    "durapy",
    "numpy",
    "vosk",
]

[project.scripts]
icarus = "Icarus:entrypoint"