
[project]
name = "Vanguard"
version = "0.0.0.1"
description = "Vanguard Knowledge Database System - An AmundWorks Project"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LICENSE"}
keywords = ["engineering", "math", "physics", "science", "wiki","python", "cli"]
authors = [{name = "Simon Stordal Amundgård"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "prompt_toolkit",
    "numpy"
]