[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awpc"
version = "0.1.8"
description = "AmundWorks Python Collective - STEMP Toolchain and Library for Python Projects"
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "README.md"
authors = [
    { name="Simon Stordal Amundgård", email="nomispus@icloud.com" }
]
requires-python = ">=3.10"
dependencies = ["numpy", "prompt-toolkit", "typing_extensions"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]