
[project]
name = "durapy"
version = "0.0.1.6"
description = "DuraPy - Multi-disciplinary Engineering Software"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LICENSE"}
keywords = ["engineering", "math", "physics", "science", "python", "cli"]
authors = [{name = "Simon Stordal Amundgård"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "prompt_toolkit",
    "numpy"
]